--- a/app.json
+++ b/app.json
@@ -1,7 +1,7 @@
 {
   "name": "OBED TECHX",
   "description": "🚀 OBED TECHX WhatsApp MultiDevice Bot – Your ultimate AI-powered assistant, built in Node.js to revolutionize WhatsApp automation! From smart replies to advanced moderation, experience seamless interaction like never before. 💡✨",
-  "logo": "https://files.catbox.moe/67ln01.jpg",
+  "logo": "https://files.catbox.moe/a810kp.jpg",
   "keywords": ["OBED TECH", "whatsapp-bot", "whatsapp-md-bot"],
   "repository": "https://github.com/Trippleo1802/OBED-TECHX1",
   "stack": "container",
